--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -104,9 +104,9 @@
             </div>
         </div>
     </div>
-<div class="mb-4">
-        <button id="exportExcel" class="btn btn-success">Export Excel</button>
-        <button id="printBtn" class="btn btn-primary">Print Table</button>
+    <div class="mb-4">
+        <button id="exportExcel" class="btn btn-success">@Model.lblExportExcel</button>
+        <button id="printBtn" class="btn btn-primary">@Model.lblPrintTable</button>
     </div>
     @* <div style="color:maroon; text-align:center">@Model.Message</div> *@
     <div class="table-settings mb-4">
