--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -118,8 +118,8 @@
         </div>
     </div>
     <div class="mb-4">
-        <button id="exportExcel" class="btn btn-success">Export Excel</button>
-        <button id="printBtn" class="btn btn-primary">Print Table</button>
+        <button id="exportExcel" class="btn btn-success">@Model.lblExportExcel</button>
+        <button id="printBtn" class="btn btn-primary">@Model.lblPrintTable</button>
     </div>
     <div class="table-settings mb-4">
         <form method="post" asp-page-handler="Action" class="row align-items-center">
