--- a/Pages/Rep_UserActivity.cshtml
+++ b/Pages/Rep_UserActivity.cshtml
@@ -122,8 +122,8 @@
                 <button type="submit" class="btn btn-primary">@Model.lblSearch</button>
             </div>
             <div class="col-3 col-md-3 col-xl-3 ps-md-3 text-end">
-                <button id="exportExcel" class="btn btn-success">Export</button>
-                <button id="printBtn" class="btn btn-primary">Print</button>
+                <button id="exportExcel" class="btn btn-success">@Model.lblExport</button>
+                <button id="printBtn" class="btn btn-primary">@Model.lblPrint</button>
             </div>
             
         </form>
