--- a/Pages/ManageDestinations.cshtml
+++ b/Pages/ManageDestinations.cshtml
@@ -104,8 +104,8 @@
         </div>
     </div>
     <div class="mb-4">
-        <button id="exportExcel" class="btn btn-success">Export Excel</button>
-        <button id="printBtn" class="btn btn-primary">Print Table</button>
+        <button id="exportExcel" class="btn btn-success">@Model.lblExportExcel</button>
+        <button id="printBtn" class="btn btn-primary">@Model.lblPrintTable</button>
     </div>
 
 
