--- a/Pages/ManageStorage.cshtml
+++ b/Pages/ManageStorage.cshtml
@@ -102,8 +102,8 @@
         </div>
     </div>
     <div class="mb-4">
-        <button id="exportExcel" class="btn btn-success">Export Excel</button>
-        <button id="printBtn" class="btn btn-primary">Print Table</button>
+        <button id="exportExcel" class="btn btn-success">@Model.lblExportExcel</button>
+        <button id="printBtn" class="btn btn-primary">@Model.lblPrintTable</button>
     </div>
 
     <div class="table-settings mb-4">
